# aquabot

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.sh  install_gazebo_garden.sh  install_ros_humble.sh  install_vrx.sh  main.yml
src/aquabot/: .gitignore  README.md
src/aquabot-competitor/: README.md
src/aquabot-competitor/aquabot_examples/aquabot_example/: CMakeLists.txt  package.xml
src/aquabot-competitor/aquabot_examples/aquabot_example/launch/: aquabot.launch.py
src/aquabot-competitor/aquabot_examples/aquabot_example/src/: aquabot_node.cpp
src/aquabot-competitor/aquabot_examples/opencv_example/: CMakeLists.txt  package.xml
src/aquabot-competitor/aquabot_examples/opencv_example/scripts/: minimal_opencv_subscriber.py
src/aquabot-competitor/aquabot_examples/opencv_example/src/: minimal_opencv_ros2_node.cpp
src/aquabot-competitor/aquabot_examples/opencv_example/src/opencv_example/: minimal_image_subscriber_node.py
src/aquabot-competitor/aquabot_examples/package_example/: CMakeLists.txt  package.xml
src/aquabot-competitor/aquabot_examples/package_example/scripts/: example_node.py
src/aquabot-competitor/aquabot_examples/package_example/src/: example_node.cpp
src/aquabot-competitor/aquabot_examples/package_example/src/package_example/: node.py
src/aquabot/aquabot_gz/: CMakeLists.txt  package.xml
src/aquabot/aquabot_gz/config/: rviz_aquabot.rviz
src/aquabot/aquabot_gz/hooks/: resource_paths.sh
src/aquabot/aquabot_gz/launch/: competition.launch.py  rviz.launch.py
src/aquabot/aquabot_gz/models/aquabot_grass/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_grass/mesh/: grass.dae
src/aquabot/aquabot_gz/models/aquabot_greenboat/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_greenboat/mesh/: greenboat.dae
src/aquabot/aquabot_gz/models/aquabot_island/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_lighthouse/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_lighthouse/mesh/: lighthouse.dae
src/aquabot/aquabot_gz/models/aquabot_lighthouse_island/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_redboat/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_redboat/mesh/: redboat.dae
src/aquabot/aquabot_gz/models/aquabot_regatta_no_obstacles_world/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_regatta_world/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_rock/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_rock/mesh/: rock.dae
src/aquabot/aquabot_gz/models/aquabot_rock_island_1/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_sapling/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_sapling/mesh/: sapling.dae
src/aquabot/aquabot_gz/models/aquabot_sonar_buoy/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_sonar_buoy/mesh/: sonar_buoy.dae
src/aquabot/aquabot_gz/models/aquabot_tree/: model.config  model.sdf
src/aquabot/aquabot_gz/models/aquabot_tree/mesh/: tree.dae
src/aquabot/aquabot_gz/src/: PatrolAndFollowScoringPlugin.cc  PatrolAndFollowScoringPlugin.hh
src/aquabot/aquabot_gz/src/aquabot_gz/: bridges.py  launch.py
src/aquabot/aquabot_gz/worlds/: aquabot_regatta.sdf  aquabot_task_easy.sdf  aquabot_task_hard.sdf  aquabot_task_medium.sdf
src/aquabot/aquabot_python/: CMakeLists.txt  package.xml  setup.cfg
src/aquabot/aquabot_python/scripts/: generate_scenario.py  plot_log_file.py  regenerate_scenario_file.py  reopen_scenario.py  teleop_keyboard.py
src/aquabot/aquabot_python/src/aquabot_python/: environnement_container.py  generator_methods.py  log_parser.py  replay_container.py  scenario_container.py  scenario_generator.py  scenario_parser.py  scenario_pyplot.py
src/aquabot/aquabot_urdf/aquabot_description/: CMakeLists.txt  package.xml
src/aquabot/aquabot_urdf/aquabot_description/component_test/: example_component_config.xacro  example_component_config.yaml  example_thruster_config.xacro  example_thruster_config.yaml  wamv_target.urdf
src/aquabot/aquabot_urdf/aquabot_description/hooks/: resource_paths.sh
src/aquabot/aquabot_urdf/aquabot_description/models/aquabot_blue_boat/: model.config  model.sdf
src/aquabot/aquabot_urdf/aquabot_description/models/aquabot_blue_boat/mesh/: blue_boat.dae
src/aquabot/aquabot_urdf/aquabot_description/urdf/: aquabot.urdf
src/benchmark/: package.xml  setup.cfg  setup.py
src/benchmark/benchmark/: benchmark.py  benchmark_error.py  task_info.py
src/benchmark/launch/: launch.py
src/benchmark/resource/: world_file_header
src/collision_parser/: dae_parser.py  main.py  no_go_zone.py  rocks.txt  test.txt
src/launcher/: package.xml  setup.py
src/launcher/launch/: launch.py
src/navigation/: CMakeLists.txt  obstacles.txt  package.xml
src/navigation/include/: Graph.hpp  Navigation.hpp  Pathfinding.hpp
src/navigation/src/: Graph.cpp  Navigation.cpp  Pathfinding.cpp  collision.cpp  main.cpp  segmentCollision.cpp
src/navigation/test/: benchmark.py
src/pathfinding/: CMakeLists.txt  obstacles.txt  package.xml
src/pathfinding/include/: Graph.hpp  Pathfinding.hpp  point.hpp
src/pathfinding/msg/: ParamVec.msg
src/pathfinding/src/: Graph.cpp  Pathfinding.cpp  boat.cpp  buoy.cpp  callback.cpp  collision.cpp  djikstra.cpp  graphGeneration.cpp  main.cpp  parsing.cpp
src/perception/: CMakeLists.txt  package.xml  setup.py
src/perception/include/: Camera.hpp  Lidar.hpp  Perception.hpp
src/perception/perception/: camera.py  lidar.py  perception.py
src/perception/src/: Camera.cpp  Lidar.cpp  Perception.cpp  computePosition.cpp  detection.cpp  main.cpp
src/perception_old/perception/: camera.py  perception.py
