<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aquabot_gz</name>
  <version>0.3.0</version>
  <description>TODO: Package description</description>
  <maintainer email="contact@sirehna.com">competitor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake_python</build_depend>
  <build_depend>vrx_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vrx_gz</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>vrx_ros</exec_depend>
  <exec_depend>vrx_gz</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_pycodestyle</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
