<?xml version="1.0"?>
<package format="2">
  <name>aquabot_description</name>
  <version>0.3.0</version>
  <description>TODO: Package description</description>
  <maintainer email="contact@sirehna.com">competitor</maintainer>
  <license>TODO: License declaration</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>vrx_gazebo</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
